Add support for socket.io

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,4 +16,5 @@ html
 
     script(src="/javascripts/jquery.min.js")
     script(src=`/javascripts/utils.js?${cache}`)
+    script(src=`/javascripts/socket.io.js?${cache}`)
     script(src=`/javascripts/script.js?${cache}`)
