--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   nav
     a.switch.btn(href="#") #[i.fas.fa-random] Switch View #[span s]
     form(method="POST" action="/" style="float:right;")
-      input(type="text" name="url" value=tele.url)
+      input(type="text" name="url" value=tele.url placeholder="Enter a Dropbox Paper URL")
       | &nbsp;
       | &nbsp;
       button.btn(type="submit") Update
