Max-width on content

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -53,10 +53,13 @@ nav
     margin-left 4px
     font-family monospace
 
-#content > *
-  color #BBB
-  &.current
-    color #000
+#content
+  max-width 1000px
+  margin auto
+  > *
+    color #BBB
+    &.current
+      color #000
 
 .is-tele
   .switch
