--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -60,6 +60,14 @@ nav
     color #BBB
     &.current
       color #000
+      .command
+        background: #7a9cd8;
+        color: #fff;
+  .command
+    background #eee
+    margin-left 7px
+    padding 0px 5px
+    border-radius 4px
 
 .is-tele
   .switch
