--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -61,8 +61,8 @@ nav
     &.current
       color #000
       .command
-        background: #7a9cd8;
-        color: #fff;
+        background #7a9cd8
+        color #fff
   .command
     background #eee
     margin-left 7px
@@ -78,6 +78,10 @@ nav
     z-index 1000
     font-size 30px
     padding 15px
+  .command
+    background #fff
+    color #000
+    margin-left 15px
   .ipad
     display block
   nav
