--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -65,7 +65,7 @@ nav
         color #fff
   .command
     background #eee
-    margin-left 7px
+    margin-right 7px
     padding 0px 5px
     border-radius 4px
 
@@ -81,7 +81,7 @@ nav
   .command
     background #fff
     color #000
-    margin-left 15px
+    margin-right 15px
   .ipad
     display block
   nav
