First attempt, but socket stuff feels too hard

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -111,3 +111,42 @@ nav
         color #fff
         &.current
           opacity 1
+
+#pg-setup
+  background #000
+  form
+    width 520px
+    margin auto
+    color #fff
+    font-size 19px
+  h1
+    font-family monospace
+  #email
+    position relative
+    margin-bottom 5px
+    input
+      background #333
+      border-radius 5px
+      padding 5px 80px 5px 20px
+      display block
+      font-size 26px
+      font-family monospace
+      border 0 none
+      width 100%
+      &:focus
+        background #fff
+    button
+      position absolute
+      right 10px
+      border: 0 none;
+      height: 26px;
+      width: 50px;
+      border-radius: 3px;
+      top: 7px;
+      background: #4186fe;
+      color: #fff;
+    p.warning
+      color #999
+      font-size 15px
+      strong
+        color #fff
