--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   nav
-    a.switch.btn(href="#") #[i.fas.fa-random] Switch View #[span s]
+    a.switch.btn(href="#") #[i.fas.fa-random] Teleprompter View #[span s]
     form(method="POST" action="/" style="float:right;")
       input(type="text" name="url" value=tele.url placeholder="Enter a Dropbox Paper URL")
       | &nbsp;
