--- a/views/setup.pug
+++ b/views/setup.pug
@@ -8,3 +8,4 @@ block content
       input(type="text" name="email")
       button(type="submit") Go
     p.warning #[strong We don't use this email anywhere!] It's just a unique ID for pairing multiple devices together. Feel free to make up a pretend email address... just make sure you use the same one everywhere!
+    p.byline Made by #[a(href="https://gkoberger.com") Gregory Koberger] &middot; #[a(href="https://twitter.com/gkoberger") @gkoberger]
