Show the command syntax

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -68,6 +68,12 @@ nav
     margin-right 7px
     padding 0px 5px
     border-radius 4px
+    &:before
+      content "["
+      display inline
+    &:after
+      content "]"
+      display inline
 
 .actions
   .is-tele &
