--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -41,6 +41,10 @@ nav
       background #eee
       &:hover
         background darken(@background, 10%)
+    &[disabled]
+      background #999
+      &:hover
+        background #999
 .ipad
   display none
 
